# graph-bg

./: Cargo.toml  LICENSE.leptos-template  README.md  flake.nix  justfile  package-lock.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: xq090frv0r8j7091kby7q1rjc2fnjsbr-source  y6fqzvv241cw0dd5nimpx2l0wb2a7zsi-source
src/: app.rs  lib.rs  main.rs
src/plot/: image.rs  mod.rs  plot.rs  test.rs
style/: output.css
test-data/: test.py
