[package]
name = "graph-bg"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
cfg-if = "1"
http = { version = "0.2", optional = true }
leptos = { version = "0.5", features = ["nightly"] }
leptos_meta = { version = "0.5", features = ["nightly"] }
leptos_actix = { version = "0.5", optional = true }
leptos_router = { version = "0.5", features = ["nightly"] }

# calc_rs = { git = "https://github.com/calacuda/calc-rs", optional = true }
# plotlib = { version = "0.5.1", optional = true }
# rayon = { version = "1.8.0", optional = true }
# image = { version = "0.24.7", optional = true }
# resvg = { version = "0.37.0", optional = true }
# serde = { version = "1.0.193", optional = true, features = ["derive"] }
# anyhow = { version = "1.0.78", optional = true }
# thiserror = { version = "1.0.53", optional = true }
calc_rs = { git = "https://github.com/calacuda/calc-rs" }
plotlib = { version = "0.5.1" }
rayon = { version = "1.8.0" }
image = { version = "0.24.7" }
resvg = { version = "0.37.0" }
serde = { version = "1.0.193", features = ["derive"] }
anyhow = { version = "1.0.78" }
thiserror = { version = "1.0.53" }
base64 = "0.21.5"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.69", features = [ "File", "Blob", "FileList", "FileReaderSync", "HtmlInputElement" ] }
# leptos_form = { version = "0.1.8", optional = true }
# web-sys = { version = "0.3.66", features = ["File", "FileReader"] }
# tera = { version = "1.19.1", optional = true }
# once_cell = { version = "1.19.0", optional = true }

[features]
default = ["csr", "hydrate", "ssr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  # "dep:anyhow",
  # "dep:calc_rs",
  # "dep:plotlib",
  # "dep:rayon",
  # "dep:image",
  # "dep:resvg",
  # "dep:serde",
  # "dep:thiserror",
  # "dep:leptos_form",
  # "dep:base64",
  # "dep:web-sys",
  # "web-sys/File",
  # "web-sys/FileReader",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/serde",
 ]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "leptos_start"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg	
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"
style-file = "style/output.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
